    Bug #16659 Can't use double quotation marks(") as password access server by Connector/NET [fixed]
    Bug #17375 CommandBuilder ignores Unsigned flag at Parameter creation [fixed]
    Bug #17749 There is no char type in MySqlDbType [fixed]
	Bug #16788 Only byte arrays and strings can be serialized by MySqlBinary [fixed]
	Bug #16645 FOUND_ROWS() Bug [can't repeat - added test case]
    Bug #18570 Unsigned tinyint (NET byte) incorrectly determined param type from param val	[fixed]
    Bug #19261 Supplying Input Parameters [fixed]
    Bug #19481 Where clause with datetime throws exception [any warning causes the exception] [fixed]
    Bug #15077 Error MySqlCommandBuilder.DeriveParameters for sp without parameters. [fixed]
    Bug #16934 Unsigned values > 2^63 (UInt64) cannot be used in prepared statements
	Bug #19515 DiscoverParameters fails on numeric datatype [fixed]
    Bug #17814 Stored procedure fails unless DbType set explicitly [fixed]
    Bug #19294 IDataRecord.GetString method should return null for null values [fixed]
    Bug #13590 ExecuteScalar returns only Int64 regardless of actual SQL type [added test case]
    Bug #19017 GetBytes Error [fixed]
    Bug #19936 DataReader already open exception [fixed]
    Bug #17106 MySql.Data.MySqlClient.CharSetMap.GetEncoding thread synchronization issue [fixed]
    Bug #17736 Selecting a row with with empty date '0000-00-00' results in Read() hanging. [fixed]
    
x-xx-05 - Version 1.0.7

    Bugs fixed or addressed
    -------------------------
    Bug #13658 connection.state does not update on Ping() [ fixed ]
	Bug #13590 ExecuteScalar returns only Int64 regardless of actual SQL type [added test case]
	Bug #13662 Prepare() truncates accented character input [already fixed, added test]
	Bug #11947 MySQLCommandBuilder mishandling CONCAT() aliased column [updated test case]
	Bug #13541 Prepare breaks if a parameter is used more than once [fixed]